Se ha añadido la logica del login y roles

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,8 @@
   },
   "AllowedHosts": "*",
 
-  "ConnectionStrings": { "CadenaConexion": "server = localhost; database = BDBultrackSeven; Integrated Security = true" }
+  "ConnectionStrings": {
+    "CadenaConexion": "Data Source=Nathaly_Abigail;Initial Catalog=BDBultrackSeven;Integrated Security=True;Trust Server Certificate=True"
+  }
 
 }
